# safe-zone

./: CMakeLists.txt  Makefile  README.md  main.d  myapp  run.sh
src/: main.cpp
src/characters/: flyingZombie.cpp  normalZombie.cpp  player.cpp  runnerZombie.cpp
src/characters/include/: character.hpp  flyingZombie.hpp  normalZombie.hpp  player.hpp  runnerZombie.hpp  zombie.hpp
src/include/: character.hpp  scene.hpp
src/scenes/: Scene1.hpp  scene.cpp  scene1.cpp
src/scenes/include/: scene.hpp  scene1.hpp
src/system/: Game.cpp
src/system/include/: Game.h  State.h  constants.h
src/tools/: animation.cpp
src/tools/include/: animation.hpp  character.hpp  scene.hpp
